[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/screens/cover.png" type="Texture" id=1]
[ext_resource path="res://scripts/screens/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = -130.5
margin_right = 194.0
margin_bottom = 130.5

[node name="Button" type="Button" parent="TextureRect/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.67451 )
margin_right = 388.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"

[node name="Button2" type="Button" parent="TextureRect/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.67451 )
margin_top = 132.0
margin_right = 388.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="TextureRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
